[gd_scene load_steps=12 format=3 uid="uid://dnf5b3qd7uq06"]

[ext_resource type="Script" path="res://Viraj Stuff/enemies/desert_slime.gd" id="1_eq5or"]
[ext_resource type="Texture2D" uid="uid://qjtu7rfnt0i1" path="res://Viraj Stuff/art/Slime.png" id="2_mcgcj"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pv314"]
radius = 4.0
height = 14.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wp3rb"]
radius = 3.33333
height = 14.0

[sub_resource type="Animation" id="Animation_6n0ee"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -4)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_dtv2w"]
resource_name = "walkDown"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 4, 8, 12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2(0, -4), Vector2(0, -8), Vector2(0, -7.485), Vector2(0, -4)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2(1, 1), Vector2(1.386, 0.906), Vector2(1.34, 0.842), Vector2(0.968, 1.037)]
}

[sub_resource type="Animation" id="Animation_3j3kp"]
resource_name = "walkLeft"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [2, 6, 10, 14]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2(0, -4.186), Vector2(-0.686, -7.906), Vector2(0, -7.223), Vector2(0, -4)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2(1.116, 1), Vector2(1.46, 0.84), Vector2(1.34, 0.878), Vector2(0.968, 1.037)]
}

[sub_resource type="Animation" id="Animation_prnu3"]
resource_name = "walkRight"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [3, 7, 11, 15]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2(0, -4.186), Vector2(0.498, -7.906), Vector2(0, -7.223), Vector2(0, -4)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2(1.116, 1), Vector2(1.46, 0.84), Vector2(1.34, 0.878), Vector2(0.968, 1.037)]
}

[sub_resource type="Animation" id="Animation_jh2wy"]
resource_name = "walkUp"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 5, 9, 13]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2(0, -4.186), Vector2(0, -8), Vector2(0, -7.485), Vector2(0, -4)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2(1, 1), Vector2(1.386, 0.906), Vector2(1.34, 0.842), Vector2(0.968, 1.037)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_btldw"]
_data = {
"RESET": SubResource("Animation_6n0ee"),
"walkDown": SubResource("Animation_dtv2w"),
"walkLeft": SubResource("Animation_3j3kp"),
"walkRight": SubResource("Animation_prnu3"),
"walkUp": SubResource("Animation_jh2wy")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_c50sm"]
radius = 53.5584

[node name="DesertSlime" type="CharacterBody2D"]
z_index = 1
scale = Vector2(2, 2)
collision_layer = 2
collision_mask = 2
script = ExtResource("1_eq5or")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_pv314")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.984314, 0.592157, 0, 1)
position = Vector2(0, -7)
texture = ExtResource("2_mcgcj")
hframes = 4
vframes = 4

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, -4)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_wp3rb")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../HitBox")
libraries = {
"": SubResource("AnimationLibrary_btldw")
}

[node name="AggroRange" type="Area2D" parent="."]
metadata/Type = "Range"

[node name="CollisionShape2D" type="CollisionShape2D" parent="AggroRange"]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_c50sm")

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="area_exited" from="HitBox" to="." method="_on_hit_box_area_exited"]
[connection signal="area_entered" from="AggroRange" to="." method="_on_aggro_range_area_entered"]
